# dak_core

./: CMakeLists.txt  Create-Solution.cmd
dak_core/: CMakeLists.txt
dak_core/include/dak/core/: all.h  any_binary_op.h  any_binary_ops.h  any_compare_op.h  any_convert_op.h  any_dominant_op.h  any_helpers.h  any_is_compatible_op.h  any_nullary_op.h  any_nullary_ops.h  any_op_selector.h  any_ops.h  any_size_op.h  any_stream_op.h  any_to_text_op.h  any_unary_op.h  any_unary_ops.h  any_var.h  array.h  dict.h  internal_names.h  member_var.h  name.h  object.h  ref.h  ref_counted.h  stream.h  types.h  util.h  var.h  var_ops.h
dak_core/src/: any_compare_op.cpp  any_convert_op.cpp  any_dominant_op.cpp  any_is_compatible_op.cpp  any_ops.cpp  any_size_op.cpp  any_stream_op.cpp  any_to_text_op.cpp  array.cpp  dict.cpp  name.cpp  object.cpp  ref_base.cpp  ref_counted.cpp  stream.cpp  var.cpp
dak_core_tests/: CMakeLists.txt
dak_core_tests/include/: helpers.h  tests_helpers.h
dak_core_tests/include/dak/tests/: helpers.h
dak_core_tests/src/: any_compare_op_tests.cpp  any_convert_op_tests.cpp  any_dominant_op_tests.cpp  any_is_compatible_op_tests.cpp  any_ops_tests.cpp  any_size_op_tests.cpp  any_stream_op_tests.cpp  any_to_text_op_tests.cpp  array_tests.cpp  dict_tests.cpp  name_tests.cpp  stream_tests.cpp  var_tests.cpp
